premimum section done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         font-family: 'Manrope', sans-serif;
     }
+
+
 </style>
     <title>Tea-house</title>
 
@@ -130,6 +132,59 @@
 
 
     </section>
+
+
+
+<section  class="mt-24 gap-9 flex flex-col lg:flex-row" >
+
+
+
+    <div class="premium-left flex-1  gap-2 grid grid-cols-1 md:grid-cols-2 grid-rows-1 md:grid-rows-4">
+
+<div  class="bg-red-50 row-span-1 rounded-xl min-h-32 min-w-60  " >
+
+
+</div>
+<div  class="bg-red-50 row-span-2 rounded-xl flex items-center justify-center py-10 box-border " >
+
+    <img src="./images/fresh-1.png " alt="">
+</div>
+<div class="bg-slate-200 row-span-2 rounded-xl flex items-center justify-center py-10 box-border">
+
+    <img src="./images/fresh-2.png" alt="">
+    
+</div>
+<div  class="bg-slate-200 row-span-1 rounded-xl min-h-32 min-w-60  " >
+
+
+</div>
+
+
+
+
+    </div>
+
+
+
+    <div class="premium-right flex-1 ">
+<h1 class="text-4xl font-extrabold mb-10" >Great Tea, Freshly <br> Presented</h1>
+<p class="text-base font-medium text-[#777]" >The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+
+<h1 class="text-xl font-extrabold pt-12" >Unique Taste</h1>
+<p class="text-base font-medium text-[#777]" >A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+<h1 class="text-xl font-extrabold pt-12" >Premium Quality</h1>
+<p class="text-base font-medium text-[#777]" >Premium Quality that makes tea more elegant and more durable when you use it.</p>
+
+    </div>
+
+
+
+
+
+
+</section>
+
+
 </main>
 
 <footer>
