margin-problem-fix

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 
 
-<section class="mt-16 bg-gradient-to-r from-[#FF8938] to-[#f00] rounded-2xl" >
+<section class="bg-gradient-to-r from-[#FF8938] to-[#f00] rounded-2xl" >
 
 <div class="p-14 gap-24
  flex flex-col lg:flex-row items-center">
