--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="">
             <h1 class="text-5xl font-bold">It's good <br>
                 tea time at The <br> Tea House</h1>
-            <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+            <p class=" w-[50%] mx-auto  py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
             <button class="btn bg-gradient-to-r from-amber-600 to-red-400 text-white">Explore-More     <i class="fa-solid fa-arrow-trend-up"></i> </button>
           </div>
 
