--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <header class=" w-[94%] lg:w-[80%] mx-auto" >
 
-    <div class="hero  min-h-screen  ">
+    <div class="hero w-[90%] min-h-screen  ">
         <div class="hero-content gap-24 flex-col md:flex-row">
          
           <div class="">
@@ -41,7 +41,7 @@
 
 <div class="">
 
-    <img  src="./images/banner.png" class="max-w-sm rounded-lg  " />
+    <img mx-w[100%] src="./images/banner.png" class="max-w-sm rounded-lg  " />
 
 <div class="rating flex items-center gap-6 shadow-lg p-6 w-[255px] rounded-xl -mt-12 bg-white  ">
     <i class="fa-solid fa-star text-amber-400 text-3xl"></i>
