--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body  class="manrope" >
     
 
-<header class=" w-[94%] lg:w-[80%] mx-auto" >
+<!-- <header class=" w-[94%] lg:w-[80%] mx-auto" >
 
     <div class="hero w-[90%] min-h-screen  ">
         <div class="hero-content gap-24 flex-col md:flex-row">
@@ -63,7 +63,7 @@
 
 
 
-</header>
+</header> -->
 
 
 
