--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div class="">
 
-   <!-- <img mx-w[100%] src="./images/banner.png" class="max-w-sm rounded-lg  " /> -->
+   <img w[80%] mx-auto src="./images/banner.png" class="max-w-sm rounded-lg  " />
 
 <div class="rating flex items-center gap-6 shadow-lg p-6 w-[255px] rounded-xl -mt-12 bg-white  ">
     <i class="fa-solid fa-star text-amber-400 text-3xl"></i>
