--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 <header class=" w-[94%] lg:w-[80%] mx-auto" >
 
     <div class="hero w-[90%] min-h-screen  ">
-        <div class="hero-content gap-24 flex-col md:flex-row">
+        <div class="hero-content gap-24  flex-col md:flex-row">
          
-          <div class="">
+          <div class="flex-1">
             <h1 class="text-5xl font-bold">It's good <br>
                 tea time at The <br> Tea House</h1>
-            <p class=" w-[50%] mx-auto  py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+            <p class=" mx-auto  py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
             <button class="btn bg-gradient-to-r from-amber-600 to-red-400 text-white">Explore-More     <i class="fa-solid fa-arrow-trend-up"></i> </button>
           </div>
 
-<div class="">
+<div class="flex-1">
 
-   <img   src="./images/banner.png" class="mx-w[100%] rounded-lg  " />
+   <img    src="./images/banner.png" class="mx-w[100%] mx-auto lg:max-w-sm rounded-lg  " />
 
 <div class="rating flex items-center gap-6 shadow-lg p-6 w-[255px] rounded-xl -mt-12 bg-white  ">
     <i class="fa-solid fa-star text-amber-400 text-3xl"></i>
@@ -272,12 +272,126 @@
 
 </section>
 
+<!-- new and event section -->
+
+<section  class="mt-16 text-center" >
+
+  <h1  class="text-4xl font-extrabold" >News & Events</h1>
+  <p   class="text-base font-medium max-w-4xl mx-auto mt-4 text-[#777]" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.  </p>
+  
+
+
+
+
+<div class="news-card mt-16 grid gap-11 grid-cols-1 md:grid-cols-3">
+
+
+
+
+
+  <div class="card px-4 py-6 card-compact  bg-base-100 border-2 ">
+    <figure><img class="" src="images/news-1.png" alt="Shoes" /></figure>
+    <div class="card-body">
+      <p class="text-left" >Feb 05, 2027</p>
+      <h2 class="text-xl font-extrabold text-left">Collecting 8 points for discount</h2>
+      <p  class="text-left" >If a dog chews shoes whose shoes does he choose?</p>
+      <h2 class="text-base font-bold text-left">Learn More</h2>
+    </div>
+  </div>
+  <div class="card px-4 py-6 card-compact  bg-base-100 border-2 ">
+    <figure><img class="" src="images/news-2.png" alt="Shoes" /></figure>
+    <div class="card-body">
+      <p class="text-left" >Feb 05, 2027</p>
+      <h2 class="text-xl font-extrabold text-left">Collecting 8 points for discount</h2>
+      <p  class="text-left" >If a dog chews shoes whose shoes does he choose?</p>
+      <h2 class="text-base font-bold text-left">Learn More</h2>
+    </div>
+  </div>
+  <div class="card px-4 py-6 card-compact  bg-base-100 border-2 ">
+    <figure><img class="" src="images/news-3.png" alt="Shoes" /></figure>
+    <div class="card-body">
+      <p class="text-left" >Feb 05, 2027</p>
+      <h2 class="text-xl font-extrabold text-left">Collecting 8 points for discount</h2>
+      <p  class="text-left" >If a dog chews shoes whose shoes does he choose?</p>
+      <h2 class="text-base font-bold text-left">Learn More</h2>
+    </div>
+  </div>
+
+
+
+
+
+  
+</div>
+
+
+
+</section>
+
 
 </main>
 
-<footer>
+<footer class=" py-24 bg-orange-100 mt-40">
+<div  class="w-[90%] md:w-[90%] lg:w-[80%] mx-auto flex flex-col md:flex-row justify-between gap-4 space-y-4" >
+
+<img class="w-[60px] " src="./images/cup.png" alt="">
+<div>
+
+<p>Ready to get strated?</p>
+<button class="btn mt-4 bg-gradient-to-r from-amber-600 to-red-400 text-white">Get started </i> </button>
+
+</div>
 
 
+
+</div>
+
+<div class="footer-main w-[90%] md:w-[90%] lg:w-[80%] mx-auto footer mt-16">
+
+
+
+
+
+  <nav>
+    <header class="footer-title">Quick Links</header> 
+    <a class="link link-hover">Home</a>
+    <a class="link link-hover">About Us</a>
+    <a class="link link-hover">Insurance</a>
+    <a class="link link-hover">Privacy Policy</a>
+  </nav> 
+  <nav>
+    <header class="footer-title">Our Service</header> 
+    <a class="link link-hover">Life Insurance</a>
+    <a class="link link-hover">Car Insurance</a>
+    <a class="link link-hover">Car Insurance</a>
+    <a class="link link-hover">House Insurance</a>
+  </nav> 
+  <nav>
+    <header class="footer-title">Help</header> 
+    <a class="link link-hover">FAQs</a>
+    <a class="link link-hover">Contact Us</a>
+   
+  </nav> 
+  <form>
+    <header class="footer-title">Newsletter</header> 
+    <fieldset class="form-control w-80">
+      <label class="label">
+        <span class="label-text text-2xl font-semibold">Subscribe to our newsletter</span>
+      </label> 
+      <div class="join">
+        <input type="email" placeholder="Enter your email adress" class=" bg-orange-100 border-b border-[#494949] w-64" /> 
+        <button class="btn mt-4 bg-gradient-to-r from-amber-600 to-red-400 text-white"><i class="fa-solid fa-greater-than"></i> </button>
+      </div>
+    </fieldset>
+  </form>
+
+</div>
+
+<footer class="footer footer-center p-4 mt-16 text-base-content">
+  <aside>
+    <p>Copyright © 2024 - All right reserved by Syed Rakib Hasan</p>
+  </aside>
+</footer>
 </footer>
 
 </body>
